--- a/app/src/main/res/layout/activity_entering_number.xml
+++ b/app/src/main/res/layout/activity_entering_number.xml
@@ -26,7 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="عدد بده !"
+            android:text="مقدار را واردکنید:"
             android:id="@+id/textView44"
             android:textSize="20dp"
             android:textColor="@android:color/background_dark"
@@ -62,7 +62,7 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
             <Button
                 android:text="2"
                 android:textColor="#ffffff"
@@ -73,7 +73,7 @@
                 android:layout_toRightOf="@id/n1"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
             <Button
                 android:text="3"
                 android:textColor="#ffffff"
@@ -84,7 +84,7 @@
                 android:layout_toRightOf="@id/n2"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" /></LinearLayout>
+                android:textSize="40dp" /></LinearLayout>
 
         <LinearLayout
                 android:orientation="horizontal"
@@ -107,7 +107,7 @@
                 android:layout_below="@id/n1"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
             <Button
                 android:text="5"
                 android:textColor="#ffffff"
@@ -119,7 +119,7 @@
                 android:layout_toRightOf="@id/n1"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
             <Button
                 android:text="6"
                 android:textColor="#ffffff"
@@ -131,7 +131,7 @@
                 android:layout_toRightOf="@id/n2"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" /></LinearLayout>
+                android:textSize="40dp" /></LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -155,7 +155,7 @@
                 android:layout_below="@id/n4"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
 
             <Button
                 android:text="8"
@@ -168,7 +168,7 @@
                 android:layout_toRightOf="@id/n1"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
 
             <Button
                 android:text="9"
@@ -181,7 +181,7 @@
                 android:layout_toRightOf="@id/n2"
                 android:layout_gravity="bottom"
                 android:layout_weight="1"
-                android:textSize="20dp" />
+                android:textSize="40dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -197,7 +197,7 @@
             android:layout_weight="1">
 
                 <Button
-                    android:text="تأیید!"
+                    android:text="تایید"
                     android:textColor="#ffffff"
                     android:id="@+id/done"
                     android:background="#87A96B"
@@ -235,7 +235,7 @@
                     android:layout_toStartOf="@+id/del"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:textSize="20dp" />
+                    android:textSize="40dp" />
             </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
