--- a/app/src/main/res/layout/activity_sood_yab.xml
+++ b/app/src/main/res/layout/activity_sood_yab.xml
@@ -241,8 +241,7 @@
                         android:layout_marginRight="5dp"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
-                        android:background="@drawable/logo_selector"
-                        android:src="@drawable/logo_sarmaye2"
+                        android:background="@drawable/logo_sarmaye2"
                         android:id="@+id/logo_sarmayes" />
 
                     <ImageButton
