--- a/app/src/main/res/layout/activity_vam_yab.xml
+++ b/app/src/main/res/layout/activity_vam_yab.xml
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="تومان"
+                android:text="میلیون تومان"
                 android:id="@+id/toman3"
                 android:layout_alignBottom="@+id/editText5"
                 android:layout_toLeftOf="@+id/editText5"
